still concurrency test problem